syntax = "proto3";
package JaegerNet;

message ConnectRequest
{
}

message ConnectResponse
{
    int32 PlayerNumber = 1;
}

message ConnectBroadcast
{
    message Player
    {
        int32 PlayerNumber = 1;
    }

    repeated Player PlayerInfo = 1;
}

message DisconnectRequest
{
    int32 PlayerNumber = 1;
}

message DisconnectResponse
{
}
