syntax = "proto3";
package JaegerNet;

message CreateLobbyMessage
{
    // Request

    // Response
    int32 LobbyId = 1;
    int32 Error = 2;
}